<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"> 

    <item android:title="@string/totalcredits"
        android:id="@+id/totalcredits"
        android:showAsAction="always" />
    <item android:title="@string/creditbank"
        android:id="@+id/creditbank"
        android:showAsAction="always" />
    <item android:title="@string/credits"
        android:id="@+id/credits"
        android:showAsAction="always" />
    <item android:title="@string/newcredits"
        android:id="@+id/newcredits"
        android:showAsAction="always" />
    <item android:title="@string/lovecredits"
        android:id="@+id/lovecredits"
        android:showAsAction="always" />
    <item android:title="@string/totalrevenue"
        android:id="@+id/totalrevenue"
        android:showAsAction="always" />
</menu>