<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/login_logo" />

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="287dp"
        android:layout_height="35dp"
        android:layout_below="@id/iv_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/account_edittext_shape"
        android:ems="10"
        android:hint="@string/login_account_text"
        android:inputType="textPersonName"
        android:paddingLeft="8dp" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignEnd="@+id/editText_name"
        android:layout_alignLeft="@+id/editText_name"
        android:layout_alignRight="@+id/editText_name"
        android:layout_alignStart="@+id/editText_name"
        android:layout_below="@+id/editText_name"
        android:background="@drawable/et_rectangle_shape"
        android:ems="10"
        android:hint="@string/input_password_text"
        android:inputType="textPassword"
        android:paddingLeft="8dp" />

    <EditText
        android:id="@+id/editText_confirm_password"
        android:layout_width="287dp"
        android:layout_height="35dp"
        android:layout_below="@id/editText_password"
        android:layout_centerHorizontal="true"
        android:background="@drawable/et_rectangle_shape"
        android:ems="10"
        android:hint="@string/confirm_password_text"
        android:inputType="textPersonName"
        android:paddingLeft="8dp" />

    <EditText
        android:id="@+id/editText_nickname"
        android:layout_width="287dp"
        android:layout_height="35dp"
        android:layout_below="@id/editText_confirm_password"
        android:layout_centerHorizontal="true"
        android:background="@drawable/et_rectangle_shape"
        android:ems="10"
        android:hint="@string/member_nickname_text"
        android:inputType="textPersonName"
        android:paddingLeft="8dp" />

    <EditText
        android:id="@+id/editText_phnoe"
        android:layout_width="287dp"
        android:layout_height="35dp"
        android:layout_below="@id/editText_nickname"
        android:layout_centerHorizontal="true"
        android:background="@drawable/password_edittext_shape"
        android:ems="10"
        android:hint="@string/phone_text"
        android:inputType="textPersonName"
        android:paddingLeft="8dp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_password"
        android:layout_alignRight="@+id/editText_password"
        android:layout_below="@+id/editText_phnoe"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/login_btn_bg_color"
        android:text="@string/login"
        android:textColor="@android:color/white" />


    <include layout="@layout/bottom_menu_layout" />

</RelativeLayout>