<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/iv_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/account_edittext_shape"
        android:ems="10"
        android:hint="@string/account"
        android:inputType="textPersonName"
        android:paddingLeft="8dp" />


    <EditText
        android:id="@+id/editText_phone"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText_name"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/et_rectangle_shape"
        android:ems="10"
        android:hint="@string/phone_text"
        android:inputType="textPassword"
        android:paddingLeft="8dp" />

    <EditText
        android:id="@+id/editText_new_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/editText_phone"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/password_edittext_shape"
        android:ems="10"
        android:hint="@string/new_password_text"
        android:inputType="textPassword"
        android:paddingLeft="8dp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_new_password"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@color/login_btn_bg_color"
        android:text="@string/login"
        android:textColor="@android:color/white" />


</RelativeLayout>